cluster/base/templates/argocd-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
  namespace: argocd
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "code"
    hajimari.io/group: "Management"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.finnhartshorn.com`)
    kind: Rule
    services:
    - name: argocd-server
      port: 443
      scheme: https
      serversTransport: argocd-transport
  tls:
    secretName: wildcard-tls
