cluster/base/templates/longhorn-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "storage"
    hajimari.io/group: "Management"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`longhorn.finnhartshorn.com`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
  tls:
    secretName: wildcard-tls
